--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "react": "^18.2.0",
+    "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-redux": "^8.0.5",
