--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.1.3",
     "firebase": "^9.13.0",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
@@ -19,8 +20,10 @@
     "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
