--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "react-youtube": "^10.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
