--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@mui/material": "^5.11.5",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "firebase": "^9.13.0",
